comfortable ttc stuff

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1 id="header">Tic Tac Toe!</h1>
     <!-- Import program logic -->
-    <script src="script.js"></script>
+    <script src="global.js"></script>
+    <script src="dom.js"></script>
   </body>
 </html>
